# coq-verified-extraction

./: .gitignore  LICENSE  Makefile  Makefile.coq.local  README.md  _CoqProject  artifact.md  coq-malfunction.opam  coq-verified-extraction.opam  opam
benchmarks/: .gitignore  Makefile  README.md  TESTS  matthieu-stats.md  timing.md  timings.md  yannick-stats.md
coq_metacoq_extraction_malfunction_ffi/: dune-project
coq_metacoq_extraction_ocaml_ffi/: dune-project
coq_metacoq_extraction_plugin/: dune-project
coq_metacoq_extraction_plugin/lib/: dune  g_metacoq_malfunction.mlg  metacoq_malfunction.ml  metacoq_malfunction.mli
coq_verified_extraction_malfunction_ffi/: dune-project
coq_verified_extraction_malfunction_ffi/lib/: float64.ml
coq_verified_extraction_malfunction_ffi/test/: dune
coq_verified_extraction_ocaml_ffi/: dune-project
coq_verified_extraction_plugin/: coq_verified_extraction.opam
coq_verified_extraction_plugin/lib/: coq_ffi.ml  dune
examples/: Makefile
lib/: axioms-nocoq.ml  axioms.ml
plugin/: CoqMsgFFI.v  Extract.v  Loader.v  META.coq-metacoq-extraction-ocaml  META.coq-metacoq-malfunction  META.coq-verified-extraction-ocaml  Makefile  Makefile.coq.local  Makefile.local  Makefile.plugin.local  OCamlFFI.v  PrimArray.v  PrimFloat.v  PrimFloats.v  PrimInt63.v  Show.v  _CoqProject  _PluginProject  clean_extraction.sh  compile.patch  compile_malfunction.mli  extract_extraction.v  fix_extraction.patch  fix_extraction2.patch  fix_extraction3.patch  fix_extraction4.patch  foo.ml  g_metacoq_extraction_ocaml.ml  g_metacoq_extraction_ocaml.mlg  g_metacoq_malfunction.mlg  g_verified_extraction_ocaml.mlg  metacoq_extraction_ocaml.mlpack  metacoq_malfunction.ml  metacoq_malfunction.mli  metacoq_malfunction_plugin.mlpack  template.files  verified_extraction_ocaml.mlpack
plugin-bootstrap/: .gitignore  Loader.v  META.coq-metacoq-extraction-malfunction  META.coq-metacoq-verified-malfunction  Makefile  Makefile.coq.local  Makefile.coq.local-late  Makefile.local  Makefile.local-late  OCamlFFI.v  PrimArray.v  PrimFloat.v  PrimInt63.v  _CoqProject  axioms.ml  compile_malfunction.mli  extract_extraction.v  fix_primitives.sh  g_metacoq_extraction_malfunction.mlg  g_metacoq_verified_malfunction.mlg  metacoq_extraction_malfunction.mlpack  metacoq_verified_malfunction_plugin.mlpack  test_bootstrap.v  test_extraction_malfunction.v  test_verified_extract.v  verified_extraction_malfunction.mlpack
(+182 files in other folders)
