opam-version: "2.0"
version: "dev"
maintainer: "yannick.forster@inria.fr"
homepage: "https://github.com/yforster/coq-malfunction/"
dev-repo: "git+https://github.com/yforster/coq-malfunction/"
bug-reports: "https://github.com/yforster/coq-malfunction/issues"
authors: ["Yannick Forster"
          "Matthieu Sozeau"
          "Nicolas Tabareau"]
license: "MIT"
build: [
  [echo]
]
install: [
  [make "-j%{jobs}%"]
]
depends: [
  "coq" { >= "8.17" & < "8.18~" }
  "coq-ceres" {= "0.4.1"}
  "coq-metacoq-erasure-plugin"
  "malfunction" {= "0.5" }
]

synopsis: "Verified extraction from Coq to OCaml"
url {
  git: "https://github.com/yforster/coq-malfunction/#main"
}

