(library
 (public_name coq_verified_extraction.plugin)
 (name coq_verified_extraction_plugin)
 (libraries coq-core.kernel coq-core.lib coq-core.library coq-core.interp coq-core.vernac coq-core.plugins.ltac coq-metacoq-template-ocaml.plugin)
 (flags -open Metacoq_template_plugin))

(rule
 (target g_verified_extraction.ml)
 (deps g_verified_extraction.mlg)
 (action (run coqpp g_verified_extraction.mlg)))